methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:4: error: not found: value RED
    setBrushColor(RED)
                  ^PatternPicture:17: error: not found: value BLUE
    setBrushColor(BLUE)
                  ^PatternPicture:35: error: not found: value GREEN
    setBrushColor(GREEN)
                  ^PatternPicture:52: error: not found: value YELLOW
    setBrushColor(YELLOW)
                  ^